# Avenir

./: .gitignore  Cargo.toml  LICENSE  README.md  render.frag  shader.frag  shader.vert
examples/: cones.rs  load_map.rs  monu_optimal.tree  simple_rendy.rs
examples/gltf/: main.rs
examples/triangle/: main.rs
old/: Cargo.toml  buffer_bundle.rs  lib.rs  pipeline.rs  utils.rs
src/: camera.rs  gfx_utils.rs  graph.rs  hal_state.rs  lib.rs  loaded_image.rs  main.rs  main2.rs  mesh.rs  pipeline.rs  renderer.rs  scene.rs  shader_utils.rs  utils.rs  vox_loader.rs
