[package]
name = "Avenir"
version = "0.1.0"
authors = ["Quentin <quentin.liardeaux@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
empty = ["rendy/empty"]
metal = ["rendy/metal"]
vulkan = ["rendy/vulkan"]
gl = ["rendy/gl"]
no-slow-safety-checks = ["rendy/no-slow-safety-checks"]
shader-compiler =  ["rendy/shader-compiler"]
experimental-spirv-reflection = ["rendy/spirv-reflection"]

[dependencies.rendy]
version = "0.5.1"
default-features = false
features = ["base", "init-winit", "vulkan", "shader-compiler"]

[dependencies]
nalgebra = "0.19.0"
lazy_static = "1.4.0"
genmesh = "0.6.2"
