[package]
name = "Avenir"
version = "0.1.0"
authors = [ "Quentin <quentin.liardeaux@epitech.eu>"
          , "Kilian Perrier <kilian.perrier@epitech.eu>"
          , "Thomas Nicollet <thomas.nicollet@epitech.eu>"
          , "Alexandre Fourcat <afourcat@gmail.com>"
          ]
edition = "2018"

[features]
empty = ["rendy/empty"]
metal = ["rendy/metal"]
vulkan = ["rendy/vulkan"]
gl = ["rendy/gl"]
no-slow-safety-checks = ["rendy/no-slow-safety-checks"]
shader-compiler =  ["rendy/shader-compiler"]
experimental-spirv-reflection = ["rendy/spirv-reflection"]

[dependencies.rendy]
version = "0.5.1"
default-features = false
features = ["base", "init-winit", "vulkan", "shader-compiler"]
generic-octree = "0.3.1"

[dependencies]
nalgebra = "0.19.0"
lazy_static = "1.4.0"
genmesh = "0.6.2"
rand = "0.7.3"
palette = "0.5.0"
log = "0.4.8"
env_logger = "0.7.1"
